# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  cub3D  main.c  map2.cub
cub3D.dSYM/Contents/Resources/DWARF/: cub3D
includes/: cub3d.h
maps/: map.cub  map2.cub
srcs/: init_params.c  keyboard.c  minimap_draw.c  screenshot.c
srcs/engine/: additional_funcs.c  draw.c  raycasting.c
srcs/errors/: errors.c
srcs/parsing/: color_parser.c  data_load.c  data_load_more.c  edit_map.c  open_map.c
srcs/utils/: utils.c  utils_2.c  utils_3.c
tex/: ea.xpm  no.xpm  so.xpm  we.xpm
